[tool.poetry]
name = "ass_parser"
version = "1.0"
description = "Parse ASS subtitle format."
authors = ["Marcin Kurczewski <dash@wind.garden>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bubblesub/ass_parser"
classifiers = [
    "Environment :: Other Environment",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "ass_parser" }
]
include = ["ass_parser/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
strict = true
disallow_untyped_decorators = false
python_version = "3.9"

[tool.pylint.master]
jobs = 0

[tool.pylint.message_control]
disable = [
    "import-error",  # for pre-commit, which cannot install external modules
    "no-member",  # leave type checking to mypy
    "signature-differs",  # leave type checking to mypy
    "duplicate-code",
    "too-few-public-methods",
    "too-many-instance-attributes",
]
