[metadata]
name = ass_parser
version = 1.0
url = https://github.com/bubblesub/ass_parser
author = Marcin Kurczewski
author_email = rr-@sakuya.pl
description = "Parse ASS subtitle format."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
package_dir = ass_parser=ass_parser
packages = find:

[options.package_data]
ass_parser = py.typed

[options.extras_require]
test =
    pytest
    black
